Includes GMS version in crash report.

We saw crashes happen that vary between GMS, but GMS info is not
recorded by chrome crash yet. In this cl, we will add GMS version code
to crash report.

BUG=613618

Review-Url: https://codereview.chromium.org/2014693003
Cr-Commit-Position: refs/heads/master@{#399224}

Former-commit-id: e36a130a8f123cec0b941f71284436c86bbfe659